--- a/index.html
+++ b/index.html
@@ -3,85 +3,79 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Neehar's Personal Site</title>
+  <title>Neehar's WebSite</title>
 </head>
 
 <body>
-  <table cellspacing=20>
+  <table>
     <tr>
-      <td><img src="http://www.inside-peru.com/images/arequipa-peru-main-page-1.jpg" alt="Neehar Kapila" /></td>
-      <td>  <h1> NEEHAR KAPILA </h1>
-        <p> <em>Software Developer for Change Healthcare inc.</em></p>
-
-        <p> I am software engineer level 3 with six years of experience in Java, PHP.</p></td>
+      <td><img src="Images/Neehar_Resume.png" width="200" height="200" alt="Neehar Profile Picture"></td>
+      <td>
+        <h1> Neehar Kapila</h1>
+        <p><em>Software Enthusiast and Innovator!</em></p>
+        <br>
+        <p>Senior Software Engineer in Healthcare Industry with 8+ years of experience in Back end development, 5 years of experience in HTML, CSS
+          and JavaScript, 2 years of working in <strong>AWS Cloud computing and Salesforce APEX development</strong> for Service cloud.</p>
+      </td>
     </tr>
   </table>
-  <hr>
-  <h3> Books and Teaching </h3>
-  <p>
-    <ul>
-      <li> <a href="https://www.audible.com/ep/title/?asin=B002V5BV96&source_code=GO1GBSH09091690EP&device=d&ds_rl=1262685&ds_rl=1263561&ds_rl=1260658&cvosrc=ppc.google.how%20to%20win%20friends%20%26%20influence%20people&cvo_campaign=936444919&cvo_crid=259937802440&Matchtype=e&gclid=EAIaIQobChMIjefvzoGz5QIVhM13Ch17EAzsEAAYASAAEgKWnPD_BwE&gclsrc=aw.ds">How
-          to win friends and influence people</a></li>
-      <li>7 habits of highly effective people</li>
-    </ul>
-  </p>
+    <hr>
+  <h3><strong>Education</strong></h3>
+  <ul>
+    <li>Texas A&M University, College Station for Masters in Mechanical Engineering -Systems and Control</li>
+    <li>Jawaharlal Nehru Technological University for Bachelors in Mechanical Engineering -Mechatronics</li>
+  </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table border="1px">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work Experience</th>
-      </tr>
-    </thead>
-    <tbody>
+  <table cellspacing="10">
     <tr>
-      <td>2012-2013</td>
-      <td>Software Analyst at Convergys</td>
+      <th>Dates</th>
+      <th>Work</th>
     </tr>
     <tr>
-      <td>2013-2017</td>
-      <td>Software Analyst at McKesson Corporation</td>
+      <td>2014-2017</td>
+      <td>Systems Analyst at McKesson Inc.</td>
     </tr>
     <tr>
-      <td>2017-2019</td>
-      <td>Software Engineer Appls Change Healthcare Inc.</td>
+      <td>2017-2020</td>
+      <td>Software Engineer 3 at Change Healthcare Inc.</td>
     </tr>
-  </tbody>
+    <tr>
+      <td>2020-Present</td>
+      <td>Senior Software Engineer at Change Healthcare Inc.</td>
+    </tr>
+  </table>
+<hr>
+  <h3>Skills</h3>
+
+  <table cellspacing="20">
+    <tr>
+      <td>
+    <tr>
+      <td>Java</td>
+      <td>⭐⭐⭐⭐</td>
+      <td>JavaScript</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>AWS</td>
+      <td>⭐⭐⭐</td>
+      <td>React</td>
+      <td>⭐</td>
+    </tr>
+    </td>
+    </tr>
   </table>
   <hr>
-  <h3> Skills</h3>
-<table>
-  <tr>
-    <td>
-    <table cellspacing=20>
-      <tr>
-        <td>Java</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>HTML, CSS</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-    </table>
-    </td>
-    <td>
-    <table cellspacing=20>
-      <tr>
-        <td>Java</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>HTML, CSS</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-    </table>
-    </td>
-  </tr>
-</table>
-  </table>
-  <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="Contact.html">Contact Information</a>
+  <h3>Hobbies</h3>
+  <ol>
+    <li><a href="https://scholar.google.com/">Reading</a></li>
+    <li><a href="https://www.youtube.com/channel/UC8gA-6a3OWLdyd4f5T-Rspw">Singing</a></li>
+    <li><a href="https://www.kayak.com/">Traveling Enthusiast</a></li>
+    <li><a href="https://www.pluralsight.com/">Software Innovator</a></li>
+  </ol>
+<hr>
+  <h3><a href="contact.html">CONTACT ME</a></h3>
 </body>
+
 </html>
